# pygame-snakes

./: .gitignore  LICENSE  README.md  TODO.md  game.py  program.py  pyproject.toml  requirements.txt  snake.py
documentation/: README.md
src/: ai_controller.py  game.py  inputctrl.py  main.py  program.py  render.py  renderer.py  snake.py
src/envs/: snake_env.py
