[tool.poetry]
name = "pygame-snakes"
description = "A snake game with powerful intelligence"
authors = ["Eric Beaudet <galpha@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2.0.0"
gymnasium = "^0.29.1"
pygame = "^2.1.2"
torch = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"